sonarr/egress-sonarr.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-sonarr
  namespace: media
spec:
  selector: app == 'sonarr'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'sabnzbd'
        ports:
          - 8080
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'plex'
        ports:
          - 32400
